--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "tree-link-block",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "homepage": "https://github.com/treeframework/object.link-block",
   "authors": [
     "Harry Roberts <harry@csswizardry.com>",
@@ -8,12 +8,15 @@
     "Ilia Kolev <info@iliakolev.com>"
   ],
   "description": "Simply displays a link as block.",
-  "main": "_link-block.scss",
+  "main": "_object.link-block.scss",
+  "ignore": [
+    "*.md"
+  ],
   "keywords": [
     "css"
   ],
   "license": "Apache",
   "dependencies": {
-    "tree-defaults": "latest"
+    "tree-defaults": "~0.2.4"
   }
 }
