--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "tree-link-block",
-  "version": "0.1.5",
-  "homepage": "https://github.com/treeframework/object.link-block",
+  "version": "0.2.0",
+  "homepage": "https://github.com/treeframework/trump.link-block",
   "author": "Ilia Kolev <info@iliakolev.com>",
   "description": "Simply displays a link as block.",
-  "main": "_object.link-block.scss",
+  "main": "_trump.link-block.scss",
   "keywords": [
     "oocss",
     "css"
