--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "tree-link-block",
   "description": "Simply displays a link as block.",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "author": "Ilia Kolev <info@iliakolev.com>",
   "bugs": {
-    "url": "https://github.com/treeframework/object.link-block/issues"
+    "url": "https://github.com/treeframework/trump.link-block/issues"
   },
   "dependencies": {
     "tree-defaults": "~0.2.5"
   },
-  "homepage": "https://github.com/treeframework/object.link-block",
+  "homepage": "https://github.com/treeframework/trump.link-block",
   "keywords": [
     "oocss",
     "css"
   ],
   "license": "MIT",
-  "main": "_object.link-block.scss",
+  "main": "_trump.link-block.scss",
   "repository": {
     "type": "git",
-    "url": "https://github.com/treeframework/object.link-block.git"
+    "url": "https://github.com/treeframework/trump.link-block.git"
   }
 }
