--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tree-link-block",
   "description": "Simply displays a link as block.",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "author": "Ilia Kolev <info@iliakolev.com>",
   "bugs": {
     "url": "https://github.com/treeframework/trump.link-block/issues"
@@ -11,8 +11,8 @@
   },
   "homepage": "https://github.com/treeframework/trump.link-block",
   "keywords": [
-    "oocss",
-    "css"
+    "css",
+    "oocss"
   ],
   "license": "MIT",
   "main": "_trump.link-block.scss",
